# ZhipuGLM-Hunter

./: .gitignore  LICENSE  PLAN.md  README.md  README_CN.md  cmd_generator.html  deep_scan.py  disclosure.py  expanded_scan.py  marathon_scan.py  max_scan.py  pyproject.toml  queries_v4.txt  quick_batch.py  requirements.txt  scanner_engine.py  state_store.py  ultimate_scan.py  verify_balances.py  zhipu_key_scanner.py
docs/superpowers/plans/: 2026-06-25-durability-layer.md
docs/superpowers/specs/: 2026-06-25-durability-layer-design.md
results/: .gitkeep
scanners/: __init__.py  base.py  github_code.py  github_commits.py  github_events.py  github_gist.py  github_issues.py
tests/: conftest.py  test_base_helpers.py  test_disclosure.py  test_engine_durability.py  test_engine_pure.py  test_engine_sources.py  test_rate_limiter.py  test_scanners_github.py  test_state_store.py  test_verify_balances.py
