[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zhipuglm-hunter"
version = "0.1.0"
description = "Scans public sources for exposed Zhipu AI / GLM API keys and validates them for authorized security research."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9.0,<4",
    "requests>=2.31.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools]
packages = ["scanners"]
py-modules = ["scanner_engine"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
